--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,64 @@ body {
 }
 
 /* Add styles here! */
+
+html,
+body {
+  height: 100%;
+}
+
+h1,
+h2,
+p {
+  margin: 1.5rem;
+}
+
+h1 {
+  padding-block: 1rem;
+  font-size: 1.5rem;
+}
+
+h2 {
+  background-color: #ffc000;
+  border-bottom: 5px solid #c90;
+  font-size: 1.1rem;
+  margin-left: -0.5rem;
+  margin-top: 0;
+  padding: 1rem 2rem;
+  width: fit-content;
+}
+
+main,
+header {
+  padding-bottom: 2rem;
+  padding-top: 3rem;
+}
+
+main {
+  background-color: #999;
+  height: 100%;
+  padding-top: 4rem;
+}
+
+header {
+  border-bottom: 5px solid #666;
+}
+
+strong {
+  color: #096;
+}
+
+.max-width-wrapper {
+  max-width: 570px;
+  margin-inline: auto;
+}
+
+.intro-chunk {
+  max-width: 350px;
+}
+
+.card {
+  background-color: white;
+  padding-block: 5px;
+  border-bottom: 5px solid #666;
+}
